feat: filter torrents by owner (admin)
